conclusao do curso

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             class="btn btn-disponiveis"
             href="#"
             id="btnLivrosDisponiveis"
+            value="disponivel"
           >
             LIVROS DISPONÍVEIS
           </button>
@@ -315,5 +316,7 @@
     <script src="./app/metodoForEach.js"></script>
     <script src="./app/metodoMap.js"></script>
     <script src="./app/metodoFilter.js"></script>
+    <script src="./app/metodoSort.js"></script>
+    <script src="./app/metodoReduce.js"></script>
   </body>
 </html>
